# keyroost

./: .gitignore  BRANCH.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  PLAN.md  README.md  SECURITY.md  TODO-hardening.md  TODO-v0.7.5.md  quickstart.sh  token2-otp-complete.patch
.cargo/: audit.toml
.claude/: settings.json
.claude/hooks/: guard.sh
.github/: dependabot.yml
.github/workflows/: audit.yml  ci.yml  deps-outdated.yml  fuzz.yml  linux-bundles.yml  publish.yml  release.yml
crates/keyroost/: Cargo.toml
crates/keyroost-ctap/: Cargo.toml
crates/keyroost-ctap/src/: bio_enroll.rs  cbor.rs  client_pin.rs  cmd.rs  config.rs  cred_mgmt.rs  hid.rs  large_blobs.rs  lib.rs  pin.rs  transport.rs
crates/keyroost-hid/: Cargo.toml
crates/keyroost-hid/src/: lib.rs
crates/keyroost-import/: Cargo.toml
crates/keyroost-import/src/: bulk.rs  encrypted.rs  lib.rs  migration.rs  otpauth.rs
crates/keyroost-import/tests/: aegis_encrypted_roundtrip.rs
crates/keyroost-keyring/: Cargo.toml
crates/keyroost-keyring/src/: lib.rs
crates/keyroost-oath/: Cargo.toml
crates/keyroost-oath/src/: crypto.rs  lib.rs
crates/keyroost-openpgp/: Cargo.toml
crates/keyroost-openpgp/src/: lib.rs
crates/keyroost-piv/: Cargo.toml
crates/keyroost-piv/src/: lib.rs  spki.rs  x509.rs  x509_parse.rs
crates/keyroost-proto/: Cargo.toml
crates/keyroost-proto/src/: codec.rs  lib.rs  sha1.rs  sha256.rs  sha512.rs  sm4.rs
crates/keyroost-proto/tests/: known_answer_vs_python.rs
crates/keyroost-qr/: Cargo.toml
crates/keyroost-qr/src/: lib.rs
crates/keyroost-qr/tests/: roundtrip.rs
crates/keyroost-resolve/: Cargo.toml
crates/keyroost-resolve/src/: device.rs  lib.rs
crates/keyroost-rsakey/: Cargo.toml
crates/keyroost-rsakey/src/: lib.rs
crates/keyroost-token2otp/: Cargo.toml
crates/keyroost-token2otp/src/: crypto.rs  hidframe.rs  lib.rs
crates/keyroost-token2prog/: Cargo.toml
crates/keyroost-token2prog/src/: commands.rs  lib.rs
crates/keyroost-transport/: Cargo.toml
crates/keyroost-transport/src/: ctap_pcsc.rs  lib.rs  oath.rs  openpgp.rs  piv.rs  token2otp.rs  token2prog.rs
crates/keyroost-winwebauthn/: Cargo.toml  README.md
crates/keyroost-winwebauthn/examples/: probe.rs
crates/keyroost-winwebauthn/src/: lib.rs  sys.rs
crates/keyroost/src/: main.rs  otp_pane.rs  settings.rs
crates/keyroost/src/ui/: device.rs  help.rs  mds.rs  mod.rs  theme.rs
crates/keyroostctl/: Cargo.toml
crates/keyroostctl/src/: main.rs  overview.rs
crates/molto2-ctap/: Cargo.toml
crates/molto2-ctap/src/: client_pin.rs  cmd.rs  lib.rs  pin.rs
crates/molto2-hid/src/: lib.rs
crates/molto2-import/: Cargo.toml
crates/molto2-import/src/: bulk.rs  lib.rs  otpauth.rs
crates/molto2-keyring/: Cargo.toml
crates/molto2-keyring/src/: lib.rs
crates/molto2-oath/: Cargo.toml
crates/molto2-oath/src/: crypto.rs  lib.rs
crates/molto2-openpgp/src/: lib.rs
crates/molto2-proto/: Cargo.toml
crates/molto2-proto/src/: apdu.rs  codec.rs  commands.rs  lib.rs  sha1.rs
crates/molto2-proto/tests/: known_answer_vs_python.rs
crates/molto2-resolve/: Cargo.toml
crates/molto2-resolve/src/: lib.rs
crates/molto2-rsakey/: Cargo.toml
crates/molto2-rsakey/src/: lib.rs
crates/molto2-transport/: Cargo.toml
crates/molto2-transport/src/: lib.rs  oath.rs  openpgp.rs
crates/moltoctl/: Cargo.toml
crates/moltoctl/src/: main.rs
crates/moltoui/: Cargo.toml
crates/moltoui/src/: main.rs
docs/: BRINGUP.md  DEVICE-RESEARCH.md  PROTOCOL.md  fido2.html  fingerprint.html  index.html  mds.html  molto2.html  naming.html  oath.html  openpgp.html  otp.html  piv.html  reset.html  security-keys.html  settings.html  storage.html
docs/app_icons/: README.md
docs/assets/: keyroost-theme.css  site.css  site.js
fuzz/: Cargo.toml
fuzz/fuzz_targets/: aegis_encrypted.rs  codec.rs  ctap_typed.rs  migration.rs  piv_parse.rs  qr_image.rs  token2otp_parse.rs
packaging/: LINUX-BUNDLES.md  README.md
packaging/appimage/: build-appimage.sh
packaging/aur/: .SRCINFO.template  PKGBUILD.template
packaging/flatpak/: ICON-NOTE.md  io.github.framefilter.keyroost.desktop  io.github.framefilter.keyroost.metainfo.xml  io.github.framefilter.keyroost.yml  keyroost.flatpakrepo
packaging/homebrew/: keyroost.rb.template
packaging/icons/: README.md
packaging/musl/: README.md
packaging/winget/: Framefilter.Keyroost.installer.yaml  Framefilter.Keyroost.locale.en-US.yaml  Framefilter.Keyroost.yaml
udev/: 70-keyroost-fido.rules
