[workspace]
resolver = "2"
members = [
    "crates/keyroost-proto",
    "crates/keyroost-transport",
    "crates/keyroost-hid",
    "crates/keyroost-ctap",
    "crates/keyroost-keyring",
    "crates/keyroost-resolve",
    "crates/keyroost-oath",
    "crates/keyroost-openpgp",
    "crates/keyroost-rsakey",
    "crates/keyroost-import",
    "crates/keyroostctl",
    "crates/keyroost",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
license = "MIT OR Apache-2.0"
repository = "https://github.com/framefilter/keyroost"

[workspace.lints.rust]
unsafe_code = "forbid"
