[package]
name = "keyroost-hid"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "USB HID enumeration for FIDO / security-key devices on Linux."

[lints]
workspace = true

[features]
# Force the hidapi backend on (also auto-selected on non-Linux). Lets the
# cross-platform backend be built and smoke-tested on Linux.
hidapi-backend = ["dep:hidapi"]

[dependencies]
# Optional so a default Linux build pulls nothing (the vendored sysfs backend
# stays dependency-free); enabled by the `hidapi-backend` feature for testing.
hidapi = { version = "2.6", optional = true, default-features = false, features = [
    "linux-static-hidraw",
    "macos-shared-device",
    "windows-native",
] }

# Auto-select the hidapi backend on macOS / Windows (Linux keeps the vendored
# sysfs backend with no dependency).
[target.'cfg(not(target_os = "linux"))'.dependencies]
hidapi = { version = "2.6", default-features = false, features = [
    "macos-shared-device",
    "windows-native",
] }
