[package]
name = "keyroost-transport"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "PC/SC transport for the Token2 Molto2 / Molto2v2 programmable TOTP token."

[lints]
workspace = true

[dependencies]
keyroost-proto = { path = "../keyroost-proto", version = "0.4.0" }
keyroost-oath = { path = "../keyroost-oath", version = "0.4.0" }
keyroost-openpgp = { path = "../keyroost-openpgp", version = "0.4.0" }
keyroost-piv = { path = "../keyroost-piv", version = "0.4.0" }
pcsc = "2"
# Scoped crypto exception (same reasoning as keyroost-ctap's aes/sha2 and
# keyroost-rsakey's rsa): PIV card-management-key authentication is a
# block-cipher witness/challenge round. AES (the 5.7+ default) and 3DES
# (older keys) ECB single-block encrypt/decrypt are not worth hand-rolling
# and getting subtly wrong; getrandom supplies the host challenge.
aes = { version = "0.8", default-features = false, features = ["zeroize"] }
des = { version = "0.8", default-features = false, features = ["zeroize"] }
cipher = { version = "0.4", default-features = false }
getrandom = "0.2"
# Wipe PIN/PUK/management-key APDU bodies after transmit (the same hygiene the
# CLI and importers already apply to their secret buffers).
zeroize = "1"
