[package]
name = "molto2-ctap"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "CTAP HID transport, CBOR codec, and high-level CTAP2 commands for FIDO authenticators."

[lints]
workspace = true

[dependencies]
molto2-hid = { path = "../molto2-hid", version = "0.1.0" }
