[package]
name = "molto2-oath"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Yubico/Trussed OATH (TOTP/HOTP) applet protocol over APDU."

[lints]
workspace = true

[dependencies]
molto2-proto = { path = "../molto2-proto", version = "0.1.0" }
