[package]
name = "molto2-rsakey"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Host-side RSA-2048 key material (generate / load) for OpenPGP card import."

[lints]
workspace = true

[dependencies]
# This crate is the single home for the workspace's one "vendor over depend"
# exception: RSA key generation and PKCS#1/PKCS#8 parsing are security-critical
# and not something to hand-roll. Confining `rsa`/`rand` here keeps the protocol
# crates dependency-free and lets both front-ends (moltoctl, moltoui) share the
# exact same key path. `rsa` re-exports the pkcs1/pkcs8 decoders we use.
rsa = "0.9"
rand = "0.8"
