[package]
name = "moltoui"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Desktop GUI for programming Token2 Molto2 / Molto2v2 TOTP tokens."

[lints]
workspace = true

[[bin]]
name = "moltoui"
path = "src/main.rs"

[dependencies]
molto2-proto = { path = "../molto2-proto", version = "0.1.0" }
molto2-transport = { path = "../molto2-transport", version = "0.1.0" }
molto2-hid = { path = "../molto2-hid", version = "0.1.0" }
molto2-ctap = { path = "../molto2-ctap", version = "0.1.0" }
molto2-keyring = { path = "../molto2-keyring", version = "0.1.0" }
molto2-resolve = { path = "../molto2-resolve", version = "0.1.0" }
molto2-oath = { path = "../molto2-oath", version = "0.1.0" }
molto2-import = { path = "../molto2-import", version = "0.1.0", features = ["bulk", "encrypted"] }
# Host-side RSA keygen / key-file loading for OpenPGP on-card import (shared with
# moltoctl). Owns the scoped `rsa` dependency exception.
molto2-rsakey = { path = "../molto2-rsakey", version = "0.1.0" }
eframe = { version = "0.29", default-features = false, features = ["default_fonts", "glow", "wayland", "x11"] }
egui = "0.29"
